Cargo de tipos de habitacion de crear habitacion

--- a/src/Vistas/MultiVentana.form
+++ b/src/Vistas/MultiVentana.form
@@ -1938,7 +1938,7 @@
                               <Component id="jPanel7" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jPanel8" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="169" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="195" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -1967,7 +1967,7 @@
                                                   <Group type="102" attributes="0">
                                                       <Component id="cbxTipoHabitacionCrear" min="-2" pref="207" max="-2" attributes="0"/>
                                                       <EmptySpace max="32767" attributes="0"/>
-                                                      <Component id="btnCrearHabitacion" min="-2" max="-2" attributes="0"/>
+                                                      <Component id="btnBuscarHabitacion" min="-2" max="-2" attributes="0"/>
                                                   </Group>
                                                   <Group type="102" attributes="0">
                                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -1990,10 +1990,10 @@
                                           </Group>
                                           <EmptySpace max="32767" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Group type="102" alignment="1" attributes="0">
+                                              <Group type="102" alignment="0" attributes="0">
                                                   <Component id="btnModificarHabitacion" min="-2" max="-2" attributes="0"/>
-                                                  <EmptySpace min="-2" pref="220" max="-2" attributes="0"/>
-                                                  <Component id="btnEliminarHabitacion" min="-2" max="-2" attributes="0"/>
+                                                  <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
+                                                  <Component id="btnCrearHabitacion" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace min="-2" pref="138" max="-2" attributes="0"/>
                                               </Group>
                                               <Group type="102" alignment="1" attributes="0">
@@ -2037,11 +2037,11 @@
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="btnModificarHabitacion" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="btnCrearHabitacion" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="btnBuscarHabitacion" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
-                                      <Component id="btnEliminarHabitacion" min="-2" max="-2" attributes="0"/>
                                       <Component id="cbxTipoHabitacionCrear" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace pref="73" max="32767" attributes="0"/>
+                                  <EmptySpace pref="48" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -2165,20 +2165,6 @@
                             <Property name="text" type="java.lang.String" value="Modificar"/>
                           </Properties>
                         </Component>
-                        <Component class="javax.swing.JButton" name="btnEliminarHabitacion">
-                          <Properties>
-                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                              <Color blue="59" green="4c" red="ab" type="rgb"/>
-                            </Property>
-                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                              <Font name="Segoe UI" size="16" style="1"/>
-                            </Property>
-                            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-                            </Property>
-                            <Property name="text" type="java.lang.String" value="Eliminar"/>
-                          </Properties>
-                        </Component>
                         <Component class="javax.swing.JButton" name="btnCrearHabitacion">
                           <Properties>
                             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
@@ -2192,6 +2178,23 @@
                             </Property>
                             <Property name="text" type="java.lang.String" value="Crear"/>
                           </Properties>
+                        </Component>
+                        <Component class="javax.swing.JButton" name="btnBuscarHabitacion">
+                          <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="59" green="4c" red="ab" type="rgb"/>
+                            </Property>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Segoe UI" size="16" style="1"/>
+                            </Property>
+                            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Buscar"/>
+                          </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarHabitacionActionPerformed"/>
+                          </Events>
                         </Component>
                       </SubComponents>
                     </Container>
