Se cambió la lógica del llenado del combo box Tipo Habitacion

--- a/src/Vistas/MultiVentana.form
+++ b/src/Vistas/MultiVentana.form
@@ -1931,7 +1931,7 @@
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jPanel8" max="32767" attributes="0"/>
+                                  <Component id="jPanel8" pref="1134" max="32767" attributes="0"/>
                                   <Component id="jPanel7" alignment="1" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
@@ -1968,41 +1968,39 @@
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="lblPrecioTipoHabitacion" alignment="1" min="-2" max="-2" attributes="0"/>
                                               <Component id="lblNombreTipoHabitacion" alignment="1" min="-2" max="-2" attributes="0"/>
+                                              <Group type="103" alignment="1" groupAlignment="0" attributes="0">
+                                                  <Component id="btnCrearTipoHabitacion" min="-2" pref="75" max="-2" attributes="0"/>
+                                                  <Component id="lblPrecioTipoHabitacion1" min="-2" max="-2" attributes="0"/>
+                                              </Group>
                                           </Group>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Component id="cbxTipoHabitacionAdmin" max="32767" attributes="0"/>
                                               <Group type="102" attributes="0">
-                                                  <Component id="txtPrecioTipoHabitacionAdmin" min="-2" pref="124" max="-2" attributes="0"/>
-                                                  <EmptySpace min="0" pref="38" max="32767" attributes="0"/>
+                                                  <Component id="txtCapHabiAdmin" min="-2" pref="166" max="-2" attributes="0"/>
+                                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                              </Group>
+                                              <Component id="txtPrecioTipoHabitacionAdmin" max="32767" attributes="0"/>
+                                              <Group type="102" alignment="1" attributes="0">
+                                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                                  <Component id="btnLimpiarTipoHabitacion1" min="-2" pref="109" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="btnCrearTipoHabitacion" alignment="0" min="-2" pref="75" max="-2" attributes="0"/>
-                                              <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
-                                          </Group>
+                                          <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="lblPrecioTipoHabitacion1" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="txtCapHabiAdmin" min="-2" pref="166" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="570" max="-2" attributes="0"/>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="jSeparator3" min="-2" pref="15" max="-2" attributes="0"/>
-                                          <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="btnListarTipoHabitacion" min="-2" pref="75" max="-2" attributes="0"/>
-                                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="jScrollPane10" min="-2" pref="599" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-                                      </Group>
+                                  <Component id="jSeparator3" min="-2" pref="15" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="btnListarTipoHabitacion" min="-2" pref="75" max="-2" attributes="0"/>
+                                      <Component id="jScrollPane10" min="-2" pref="599" max="-2" attributes="0"/>
                                   </Group>
+                                  <EmptySpace min="-2" pref="161" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                         </DimensionLayout>
@@ -2013,8 +2011,7 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
-                                          <Component id="jSeparator3" pref="37" max="32767" attributes="0"/>
-                                          <EmptySpace min="0" pref="109" max="32767" attributes="0"/>
+                                          <Component id="jSeparator3" pref="146" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
@@ -2022,8 +2019,7 @@
                                           <Group type="103" groupAlignment="3" attributes="0">
                                               <Component id="lblNombreTipoHabitacion" alignment="3" min="-2" max="-2" attributes="0"/>
                                               <Component id="cbxTipoHabitacionAdmin" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
-                                              <Component id="lblPrecioTipoHabitacion1" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
-                                              <Component id="txtCapHabiAdmin" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="btnListarTipoHabitacion" alignment="3" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <Group type="103" groupAlignment="0" attributes="0">
                                               <Group type="102" attributes="0">
@@ -2032,16 +2028,22 @@
                                                       <Component id="txtPrecioTipoHabitacionAdmin" alignment="3" min="-2" max="-2" attributes="0"/>
                                                       <Component id="lblPrecioTipoHabitacion" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                  <Component id="btnCrearTipoHabitacion" min="-2" max="-2" attributes="0"/>
+                                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                                  <Group type="103" groupAlignment="3" attributes="0">
+                                                      <Component id="lblPrecioTipoHabitacion1" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                                                      <Component id="txtCapHabiAdmin" alignment="3" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <EmptySpace max="32767" attributes="0"/>
+                                                  <Group type="103" groupAlignment="3" attributes="0">
+                                                      <Component id="btnCrearTipoHabitacion" alignment="3" min="-2" max="-2" attributes="0"/>
+                                                      <Component id="btnLimpiarTipoHabitacion1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <EmptySpace max="-2" attributes="0"/>
                                               </Group>
-                                              <Group type="102" alignment="0" attributes="0">
+                                              <Group type="102" attributes="0">
                                                   <EmptySpace max="-2" attributes="0"/>
                                                   <Component id="jScrollPane10" min="-2" pref="127" max="-2" attributes="0"/>
-                                              </Group>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                  <Component id="btnListarTipoHabitacion" min="-2" max="-2" attributes="0"/>
+                                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                               </Group>
                                           </Group>
                                       </Group>
@@ -2106,6 +2108,9 @@
                         </Component>
                         <Component class="javax.swing.JComboBox" name="cbxTipoHabitacionAdmin">
                           <Properties>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Helvetica Neue" size="16" style="0"/>
+                            </Property>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                               <StringArray count="0"/>
                             </Property>
@@ -2196,6 +2201,23 @@
                           </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnListarTipoHabitacionActionPerformed"/>
+                          </Events>
+                        </Component>
+                        <Component class="javax.swing.JButton" name="btnLimpiarTipoHabitacion1">
+                          <Properties>
+                            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="59" green="4c" red="ab" type="rgb"/>
+                            </Property>
+                            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                              <Font name="Segoe UI" size="16" style="1"/>
+                            </Property>
+                            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                            </Property>
+                            <Property name="text" type="java.lang.String" value="Limpiar"/>
+                          </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimpiarTipoHabitacion1ActionPerformed"/>
                           </Events>
                         </Component>
                       </SubComponents>
